* Add generation strategy support sequence-based ID generation. Relates to #37